# phobos-4.0

./: .gitignore  Dockerfile  Justfile  README.md  blender_manifest.toml  build_extension.py  codemeta.json  install_requirements.py  pyproject.toml  test_import.py
.github/workflows/: README.md  build-extension.yml  gh-pages.yml  release.yml  test-build.yml
bl_ext/UserRepository/elasticdotventures_phobos_4/: __init__.py
bl_ext/UserRepository/phobos_4/: __init__.py
phobos/: __init__.py
phobos/blender/: defs.py  phobosgui.py  phoboslog.py  phobossystem.py  reserved_keys.py
phobos/blender/io/: blender2phobos.py  phobos2blender.py
phobos/blender/model/: controllers.py  joints.py  materials.py  mechanisms.py  models.py
phobos/blender/operators/: display.py  editing.py  generic.py  io.py  selection.py
phobos/blender/utils/: blender.py  editing.py  io.py  naming.py  validation.py
phobos/ci/: base_model.py  model_testing.py  pipeline.py  test_model.py
phobos/common/: __init__.py
phobos/core/: multiple.py  robot.py
phobos/data/: xml_formats.json
phobos/data/blender/: resources.blend
phobos/geometry/: geometry.py  io.py  robot.py
phobos/io/: base.py  hyrodyn.py  parser.py  representation.py  scenes.py  sensor_representations.py  smurfrobot.py  xml_factory.py  xmlrobot.py
phobos/scripts/: check_hyrodyn.py  check_meshes.py  convert.py  get_model_file_overview.py  phobos.py  preprocess_cad_export.py  reduce_mesh.py  run_pipeline.py  setup_git.py  smurfs_in_pybullet.py  test_model.py
phobos/utils/: git.py  hyrodyn.py  inertia.py  misc.py  resources.py  transform.py  xml.py
